# clawpay

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt  test_api.py
backend/src/: config.py  main.py  models.py
backend/src/services/: bnb.py  lithic.py
contracts/: MockUSDC.sol  PayClawEscrow.sol  escrow_abi.json  usdc_abi.json
dashboard/: confirmation.html  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  Landing.jsx  Shop.jsx  index.css  main.jsx
extension/: content.js  manifest.json
mcp/: requirements.txt  server.py
