[project]
name = "clawpay-backend"
version = "2.0.0"
description = "Backend API for Arbitrum Sepolia to Fiat Payment Bridge - Lithic Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "lithic>=0.107.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.25",
    "web3>=6.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
